tmp.log
src/format_elf.c: In function ‘elf_emit_make_writable_asm’:
src/format_elf.c:15:9: error: implicit declaration of function ‘reg_name’; did you mean ‘rename’? [-Werror=implicit-function-declaration]
   15 |         reg_name(addr_reg, 64), reg_name(len_reg, 64));
      |         ^~~~~~~~
      |         rename
src/format_elf.c: At top level:
src/format_elf.c:36:31: error: initialization of ‘const char * (*)(size_t,  size_t)’ {aka ‘const char * (*)(long unsigned int,  long unsigned int)’} from incompatible pointer type ‘const char * (*)(t_reg,  t_reg)’ {aka ‘const char * (*)(enum e_reg,  enum e_reg)’} [-Werror=incompatible-pointer-types]
   36 |     .emit_make_writable_asm = elf_emit_make_writable_asm,
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~
src/format_elf.c:36:31: note: (near initialization for ‘g_elf_backend.emit_make_writable_asm’)
src/format_elf.c:37:33: error: initialization of ‘const char * (*)(size_t,  size_t)’ {aka ‘const char * (*)(long unsigned int,  long unsigned int)’} from incompatible pointer type ‘const char * (*)(t_reg,  t_reg)’ {aka ‘const char * (*)(enum e_reg,  enum e_reg)’} [-Werror=incompatible-pointer-types]
   37 |     .emit_make_executable_asm = elf_emit_make_executable_asm,
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/format_elf.c:37:33: note: (near initialization for ‘g_elf_backend.emit_make_executable_asm’)
cc1: all warnings being treated as errors
make: *** [Makefile:30: obj/format_elf.o] Error 1
